<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_controlled_robot</name>
  <version>0.0.0</version>
  <description>Hand gesture controlled robot using MediaPipe and ROS2. This package provides a ROS2 node that uses computer vision to detect hand gestures and control a robot's movement through /cmd_vel topic.</description>
  <maintainer email="nived@thedush.com">thedush</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
